Fixing a small spacing issue

--- a/main.css
+++ b/main.css
@@ -133,6 +133,7 @@ h2 {
 .section-b .box p {
   padding: 0 3rem;
   height: 4rem;
+  margin-bottom: 4rem;
 }
 
 .section-b .workLink {
